[gd_scene load_steps=13 format=3 uid="uid://du088cq02x8ws"]

[ext_resource type="Script" uid="uid://c0howk0q12qpa" path="res://scripts/advanced_settings.gd" id="1_o600e"]
[ext_resource type="FontFile" uid="uid://borwvgqdgawbj" path="res://files/fonts/EMPIREST.TTF" id="2_vw8ml"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3be7"]
bg_color = Color(0.2627451, 0.2627451, 0.2627451, 0.5882353)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xsk5"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o600e"]
bg_color = Color(0.49803922, 0.49803922, 0.49803922, 0.5882353)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3hvc"]
bg_color = Color(0.6, 0.6, 0.6, 0.39215687)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dctt"]
bg_color = Color(0.53333336, 0.6666667, 0.98039216, 0.3137255)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
shadow_color = Color(0.7647059, 0.8156863, 0.03137255, 0.33333334)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yonr6"]
bg_color = Color(0.2627451, 0.2627451, 0.2627451, 0.5882353)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_koe27"]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0ntd"]
bg_color = Color(0.53333336, 0.6666667, 0.98039216, 0.3137255)
border_color = Color(0.20784314, 0.20784314, 0.20784314, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfdt5"]
bg_color = Color(0.53333336, 0.6666667, 0.98039216, 0.3137255)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itopb"]
bg_color = Color(0.53333336, 0.6666667, 0.98039216, 0.3137255)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5

[node name="AdvancedSettings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_o600e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -155.0
offset_right = 215.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
tooltip_text = "Advanced Settings"
theme_override_styles/panel = SubResource("StyleBoxFlat_j3be7")

[node name="Controls" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -125.0
offset_right = 192.5
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MainLabel" type="Label" parent="Panel/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("2_vw8ml")
theme_override_font_sizes/font_size = 55
text = "{OPTIONS}"

[node name="SubLabel" type="Label" parent="Panel/Controls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("2_vw8ml")
theme_override_font_sizes/font_size = 28
text = "{ADVANCED=SETTINGS}"
horizontal_alignment = 1

[node name="LogLevelContainer" type="HBoxContainer" parent="Panel/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="Panel/Controls/LogLevelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("2_vw8ml")
theme_override_font_sizes/font_size = 20
text = "{LOG=LEVEL}"

[node name="LogLevelOptionButton" type="OptionButton" parent="Panel/Controls/LogLevelContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_vertical = 4
focus_next = NodePath("../../BtnContainer/BackButton")
focus_previous = NodePath("../../BtnContainer/ResetButton")
theme_override_colors/font_color = Color(0.24840015, 0.24840018, 0.24840012, 1)
theme_override_colors/font_focus_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/font_pressed_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_hover_pressed_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/font_disabled_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/icon_normal_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/icon_focus_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/icon_pressed_color = Color(0.24705882, 0.24705882, 0.24705882, 1)
theme_override_colors/icon_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_4xsk5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o600e")
theme_override_styles/hover = SubResource("StyleBoxFlat_o3hvc")
theme_override_styles/focus = SubResource("StyleBoxFlat_6dctt")

[node name="BtnContainer" type="HBoxContainer" parent="Panel/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="BackButton" type="Button" parent="Panel/Controls/BtnContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_next = NodePath("../ResetButton")
focus_previous = NodePath("../../LogLevelContainer/LogLevelOptionButton")
theme_override_colors/font_color = Color(0.99215686, 0.21568628, 0.2784314, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0.9607843, 0.050980393, 0.9019608)
theme_override_colors/font_hover_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("2_vw8ml")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_yonr6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_koe27")
theme_override_styles/hover = SubResource("StyleBoxFlat_a0ntd")
theme_override_styles/focus = SubResource("StyleBoxFlat_cfdt5")
text = "{BACK}"

[node name="ResetButton" type="Button" parent="Panel/Controls/BtnContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_next = NodePath("../../LogLevelContainer/LogLevelOptionButton")
focus_previous = NodePath("../BackButton")
theme_override_colors/font_color = Color(0.99215686, 0.21568628, 0.2784314, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0.9607843, 0.050980393, 0.9019608)
theme_override_colors/font_hover_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("2_vw8ml")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_yonr6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_koe27")
theme_override_styles/hover = SubResource("StyleBoxFlat_a0ntd")
theme_override_styles/focus = SubResource("StyleBoxFlat_itopb")
text = "{RESET}"
